syntax = "proto3";
package com.iohao.message;
option java_outer_classname = "BizProto";

// 动物
message Animal {
  // id
  int32 id = 1;
  // 动物类型 - 枚举测试
  AnimalType animalType = 2;
}

// 动物类型
enum AnimalType {
  // 鸟
  BIRD = 0;
  // 猫
  CAT = 1;
}

// 班级信息
message ClassesPb {
  // 班级学生数量
  int32 studentNum = 1;
}

// 逻辑请求 PB
message LogicRequestPb {
  string name = 1;
}

// 登录信息
message LoginVerify {
  // age 测试用的,Integer
  int32 age = 1;
  // jwt
  string jwt = 2;
  // 登录业务码
  int32 loginBizCode = 3;
  // Long value
  int64 time = 4;
  // long value
  int64 time2 = 5;
}

//
message OtherVerify {
  // jwt
  string jwt = 1;
}

//
message RoomNumPb {
  // 房间的数量
  int32 roomCount = 1;
}

// 学校等级信息
message SchoolLevelPb {
  // 学校等级 level
  int32 level = 1;
  // vip 等级
  int32 vipLevel = 2;
}

// 学校信息
message SchoolPb {
  // 学校的 email
  string email = 1;
  // 学校最大教室容量
  int32 classCapacity = 2;
  // 学校老师数量
  int32 teacherNum = 3;
  // 学校名
  string name = 4;
}

// 广播消息PB
message SpringBroadcastMessagePb {
  // 具体的广播消息内容
  string msg = 1;
}

// 用户信息
message UserInfo {
  // id
  int64 id = 1;
  // 用户名
  string name = 2;
  int32 tempInt = 3;
  // Long value
  int64 time = 4;
  // long value
  int64 time2 = 5;
}

message TempUserInfo {
  // id
  int64 id = 1;
  // 用户名
  string name = 2;
}

message SceneEnterReq {
  int32 sceneId = 1;
  float positionX = 2;
  float positionY = 3;
}

message Vector3 {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}